--- a/app/src/main/res/layout/stag_list_item.xml
+++ b/app/src/main/res/layout/stag_list_item.xml
@@ -43,7 +43,7 @@
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>
+                android:textAppearance="?textAppearanceCaption"/>
 
             <TextView
                 android:id="@+id/text_title"
@@ -52,7 +52,7 @@
                 android:layout_marginRight="16dp"
                 android:layout_toRightOf="@+id/avatar"
                 android:layout_above="@+id/text_content"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
+                android:textAppearance="?textAppearanceBody1"/>
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
