--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="card_background">@color/grey_200</color>
 
     <color name="white">#FFF5FFFF</color>
+    <color name="black">#FF000000</color>
+    <color name="transparent">#00000000</color>
 
     <color name="color_primary">@color/green_500</color>
     <color name="color_primary_dark">@color/green_700</color>
