--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    android:id="@+id/main_content"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
@@ -19,37 +18,40 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
+            app:contentScrim="@color/window_background"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
                 android:id="@+id/backdrop"
-                android:transitionName="@string/transition_string"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 android:scaleType="fitCenter"
-                app:layout_collapseMode="parallax"/>
+                android:transitionName="@string/transition_string"
+                app:layout_collapseMode="parallax" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                android:elevation="0dp"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/main_nested_scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
+            android:id="@+id/detail_main_linear"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -74,14 +76,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/favorite_title"
-                        android:textAppearance="?textAppearanceHeadline6"/>
+                        android:textAppearance="?textAppearanceHeadline6" />
 
                     <TextView
                         style="?textAppearanceBody1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/favorites_content"
-                        android:textAppearance="?textAppearanceBody1"/>
+                        android:textAppearance="?textAppearanceBody1" />
 
                 </LinearLayout>
 
@@ -90,9 +92,9 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/card_margin"
                 android:layout_marginLeft="@dimen/card_margin"
                 android:layout_marginRight="@dimen/card_margin"
+                android:layout_marginBottom="@dimen/card_margin"
                 app:cardCornerRadius="3dp"
                 app:cardElevation="3dp"
                 app:cardUseCompatPadding="true">
@@ -107,61 +109,61 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
                         android:text="Palette"
-                        android:textAppearance="?textAppearanceHeadline6"/>
+                        android:textAppearance="?textAppearanceHeadline6" />
 
                     <TextView
                         android:id="@+id/palette_vibrant"
+                        style="?textAppearanceBody1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="8dp"
                         android:text="Vibrant"
-                        style="?textAppearanceBody1"
-                        android:textColor="@android:color/white"/>
+                        android:textColor="@android:color/white" />
 
                     <TextView
                         android:id="@+id/palette_vibrant_dark"
+                        style="?textAppearanceBody1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="8dp"
                         android:text="Vibrant Dark"
-                        style="?textAppearanceBody1"
-                        android:textColor="@android:color/white"/>
+                        android:textColor="@android:color/white" />
 
                     <TextView
                         android:id="@+id/palette_vibrant_light"
+                        style="?textAppearanceBody1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="8dp"
                         android:text="Vibrant Light"
-                        style="?textAppearanceBody1"
-                        android:textColor="@android:color/white"/>
+                        android:textColor="@android:color/white" />
 
                     <TextView
                         android:id="@+id/palette_muted"
+                        style="?textAppearanceBody1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="8dp"
                         android:text="Muted"
-                        style="?textAppearanceBody1"
-                        android:textColor="@android:color/white"/>
+                        android:textColor="@android:color/white" />
 
                     <TextView
                         android:id="@+id/palette_muted_dark"
+                        style="?textAppearanceBody1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="8dp"
                         android:text="Muted Dark"
-                        style="?textAppearanceBody1"
-                        android:textColor="@android:color/white"/>
+                        android:textColor="@android:color/white" />
 
                     <TextView
                         android:id="@+id/palette_muted_light"
+                        style="?textAppearanceBody1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="8dp"
                         android:text="Muted Light"
-                        style="?textAppearanceBody1"
-                        android:textColor="@android:color/white"/>
+                        android:textColor="@android:color/white" />
 
                 </LinearLayout>
 
@@ -170,9 +172,9 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/card_margin"
                 android:layout_marginLeft="@dimen/card_margin"
                 android:layout_marginRight="@dimen/card_margin"
+                android:layout_marginBottom="@dimen/card_margin"
                 app:cardCornerRadius="3dp"
                 app:cardElevation="3dp"
                 app:cardUseCompatPadding="true">
@@ -185,11 +187,11 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="16dp"
                         android:layout_marginLeft="16dp"
                         android:layout_marginTop="16dp"
+                        android:layout_marginBottom="16dp"
                         android:text="PercentageLayout"
-                        android:textAppearance="?textAppearanceHeadline6"/>
+                        android:textAppearance="?textAppearanceHeadline6" />
 
 
                     <androidx.percentlayout.widget.PercentRelativeLayout
@@ -199,72 +201,72 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            style="?textAppearanceBody1"
                             android:id="@+id/perc1_left"
-                            app:layout_widthPercent="40%"
+                            style="?textAppearanceBody1"
                             android:layout_height="64dp"
                             android:layout_alignParentLeft="true"
-                            android:text="40%"
                             android:gravity="center"
-                            android:textColor="@color/grey_900"/>
+                            android:text="40%"
+                            android:textColor="@color/grey_900"
+                            app:layout_widthPercent="40%" />
 
                         <TextView
-                            style="?textAppearanceBody1"
                             android:id="@+id/perc1_middle"
-                            app:layout_widthPercent="20%"
+                            style="?textAppearanceBody1"
                             android:layout_height="64dp"
-                            android:text="20%"
                             android:layout_toRightOf="@id/perc1_left"
                             android:gravity="center"
-                            android:textColor="@color/grey_900"/>
+                            android:text="20%"
+                            android:textColor="@color/grey_900"
+                            app:layout_widthPercent="20%" />
 
                         <TextView
-                            style="?textAppearanceBody1"
                             android:id="@+id/perc1_right"
-                            app:layout_widthPercent="40%"
+                            style="?textAppearanceBody1"
                             android:layout_height="64dp"
                             android:layout_alignParentRight="true"
-                            android:text="40%"
                             android:gravity="center"
-                            android:textColor="@color/grey_900"/>
+                            android:text="40%"
+                            android:textColor="@color/grey_900"
+                            app:layout_widthPercent="40%" />
                     </androidx.percentlayout.widget.PercentRelativeLayout>
 
-                <androidx.percentlayout.widget.PercentRelativeLayout
-                    android:id="@+id/perc_30_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    <androidx.percentlayout.widget.PercentRelativeLayout
+                        android:id="@+id/perc_30_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
-                    <TextView
-                        style="?textAppearanceBody1"
-                        android:id="@+id/perc2_left"
-                        app:layout_widthPercent="20%"
-                        android:layout_height="64dp"
-                        android:layout_alignParentLeft="true"
-                        android:text="20%"
-                        android:gravity="center"
-                        android:textColor="@color/grey_900"/>
+                        <TextView
+                            android:id="@+id/perc2_left"
+                            style="?textAppearanceBody1"
+                            android:layout_height="64dp"
+                            android:layout_alignParentLeft="true"
+                            android:gravity="center"
+                            android:text="20%"
+                            android:textColor="@color/grey_900"
+                            app:layout_widthPercent="20%" />
 
-                    <TextView
-                        style="?textAppearanceBody1"
-                        android:id="@+id/perc2_middle"
-                        app:layout_widthPercent="60%"
-                        android:layout_height="64dp"
-                        android:text="60%"
-                        android:gravity="center"
-                        android:layout_toRightOf="@id/perc2_left"
-                        android:textColor="@color/grey_900"/>
+                        <TextView
+                            android:id="@+id/perc2_middle"
+                            style="?textAppearanceBody1"
+                            android:layout_height="64dp"
+                            android:layout_toRightOf="@id/perc2_left"
+                            android:gravity="center"
+                            android:text="60%"
+                            android:textColor="@color/grey_900"
+                            app:layout_widthPercent="60%" />
 
-                    <TextView
-                        style="?textAppearanceBody1"
-                        android:id="@+id/perc2_right"
-                        app:layout_widthPercent="20%"
-                        android:layout_height="64dp"
-                        android:layout_alignParentRight="true"
-                        android:text="20%"
-                        android:gravity="center"
-                        android:textColor="@color/grey_900"/>
-                </androidx.percentlayout.widget.PercentRelativeLayout>
+                        <TextView
+                            android:id="@+id/perc2_right"
+                            style="?textAppearanceBody1"
+                            android:layout_height="64dp"
+                            android:layout_alignParentRight="true"
+                            android:gravity="center"
+                            android:text="20%"
+                            android:textColor="@color/grey_900"
+                            app:layout_widthPercent="20%" />
+                    </androidx.percentlayout.widget.PercentRelativeLayout>
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
@@ -272,9 +274,9 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/card_margin"
                 android:layout_marginLeft="@dimen/card_margin"
                 android:layout_marginRight="@dimen/card_margin"
+                android:layout_marginBottom="@dimen/card_margin"
                 app:cardCornerRadius="4dp"
                 app:cardElevation="6dp"
                 app:cardUseCompatPadding="true">
@@ -288,30 +290,48 @@
                         android:id="@+id/regulations_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Wikipedia Page"
-                        android:layout_marginBottom="16dp"
                         android:layout_marginLeft="16dp"
                         android:layout_marginTop="16dp"
-                        android:textAppearance="?textAppearanceHeadline6"/>
+                        android:layout_marginBottom="16dp"
+                        android:text="Wikipedia Page"
+                        android:textAppearance="?textAppearanceHeadline6" />
 
                     <WebView
                         android:id="@+id/regulations_webview"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
-                        android:layout_margin="8dp"/>
+                        android:layout_margin="8dp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
+            <androidx.coordinatorlayout.widget.CoordinatorLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:id="@+id/snackbar_placeholder"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"/>
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
+
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/bottom_appbar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/toolbar_height"
+        android:layout_gravity="bottom"
+        android:elevation="@dimen/toolbar_elevation"
+        app:backgroundTint="@color/color_primary"
+        app:fabAlignmentMode="center"
+        app:fabCradleMargin="8dp"
+        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
+        app:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
         android:clickable="true"
-        app:layout_anchor="@id/info_card"
-        app:layout_anchorGravity="bottom|right|end"/>
+        app:layout_anchor="@+id/bottom_appbar" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
