--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,9 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="card_insets">12dp</dimen>
+    <dimen name="toolbar_height">48dp</dimen>
+    <dimen name="toolbar_elevation">8dp</dimen>
+
+    <dimen name="large_margin">32dp</dimen>
+    <dimen name="snackbar_offset">64dp</dimen>
 </resources>
