--- a/app/src/main/res/layout/stag_list_item.xml
+++ b/app/src/main/res/layout/stag_list_item.xml
@@ -7,7 +7,7 @@
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp">
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/item_card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -55,5 +55,5 @@
                 android:textAppearance="?textAppearanceBody1"/>
 
         </RelativeLayout>
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 </FrameLayout>
