--- a/app/src/main/res/layout/list_item_device.xml
+++ b/app/src/main/res/layout/list_item_device.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
     android:orientation="vertical">
 
     <ImageView
